--- a/values.yaml
+++ b/values.yaml
@@ -2510,6 +2510,9 @@ login:
 identity:
   # identity.enabled Enables Identity installation
   enabled: true
+  env:
+    # identity.env.springProfilesActive is the environment variable to override/pick Spring profile. Default is `dev`
+    springProfilesActive: "dev"
   # The job by identityMigration has a pre-upgrade and pre-install hook, executing on upgrade or install requests.
   # Migration Runner is a migration service that creates identity tables, triggers, and events for the physical removal of logically deleted records.
   identityMigration:
@@ -2729,8 +2732,6 @@ identity:
     env:
       # identity.identityAuthorization.env.springApplicationName is the name of the Identity service (used in audits and logs)
       springApplicationName: "ASC.identity.identityAuthorization.Authorization"
-      # identity.identityAuthorization.env.springProfilesActive is the environment variable to override/pick Spring profile. Default is `dev`
-      springProfilesActive: "dev"
   # DocSpace Identity API application parameters
   # This block defines the parameters common to all the Pods of this application
   #
