--- a/values.yaml
+++ b/values.yaml
@@ -125,7 +125,7 @@ connections:
   # connections.identityApiHost The name of the DocSpace IdentityApi service
   identityApiHost: identity-api
   # connections.identityHost The name of the DocSpace Identity service
-  identityHost: identity
+  identityHost: identity-authorization
   # connections.documentServerHost The name of the Document Server service
   # Used when installing a local Document Server (by default `docs.enabled=true`)
   documentServerHost: document-server
