--- a/values.yaml
+++ b/values.yaml
@@ -2730,8 +2730,8 @@ identity:
     # If set to, it takes priority over the `connections.mysqlUser`
     mysqlUser: ""
     env:
-      # identity.identityAuthorization.env.springApplicationName is the name of the Identity service (used in audits and logs)
-      springApplicationName: "ASC.identity.identityAuthorization.Authorization"
+      # identity.authorization.env.springApplicationName is the name of the Identity service (used in audits and logs)
+      springApplicationName: "ASC.Identity.Authorization"
   # DocSpace Identity API application parameters
   # This block defines the parameters common to all the Pods of this application
   #
