--- a/templates/services/identity.yaml
+++ b/templates/services/identity.yaml
@@ -13,9 +13,9 @@ metadata:
   {{- end }}
 spec:
   ports:
-  - port: {{ .Values.identity.identityAuthorization.containerPorts.authorization }}
+  - port: {{ .Values.identity.authorization.containerPorts.authorization }}
     name: authorization
-    targetPort: {{ .Values.identity.identityAuthorization.containerPorts.authorization }}
+    targetPort: {{ .Values.identity.authorization.containerPorts.authorization }}
   selector:
     app: identity-authorization
     {{- if .Values.commonLabels }}
