--- a/values.yaml
+++ b/values.yaml
@@ -2572,39 +2572,39 @@ identity:
     # If not set, `connections.mysqlUser` will be used
     # If set to, it takes priority over the `connections.mysqlUser`
     mysqlUser: ""
-  identityAuthorization:
-    # identity.identityAuthorization.kind The controller used for deploy
+  authorization:
+    # identity.authorization.kind The controller used for deploy
     # Possible values are `Deployment` (default) or `StatefulSet`
     kind: Deployment
-    # identity.identityAuthorization.annotations Defines annotations that will be additionally added to Identity deploy
+    # identity.authorization.annotations Defines annotations that will be additionally added to Identity deploy
     # If set to, it takes priority over the `commonAnnotations`
     # You can also use `tpl` as the value for the key
     annotations: {}
-    # identity.identityAuthorization.replicaCount Number of Identity replicas to deploy
+    # identity.authorization.replicaCount Number of Identity replicas to deploy
     replicaCount: 2
     # Update strategy used to replace old Pods by new ones
     updateStrategy:
-      # identity.identityAuthorization.updateStrategy.type Identity update strategy type
-      # Allowed values: `RollingUpdate` or `OnDelete` if `identity.identityAuthorization.kind` is set to `StatefulSet` and `RollingUpdate` or `Recreate` if `identity.identityAuthorization.kind` is set to `Deployment`
+      # identity.authorization.updateStrategy.type Identity update strategy type
+      # Allowed values: `RollingUpdate` or `OnDelete` if `identity.authorization.kind` is set to `StatefulSet` and `RollingUpdate` or `Recreate` if `identity.authorization.kind` is set to `Deployment`
       type: RollingUpdate
-      # identity.identityAuthorization.updateStrategy.rollingUpdate Used only when `identity.identityAuthorization.updateStrategy.type=RollingUpdate`
+      # identity.authorization.updateStrategy.rollingUpdate Used only when `identity.authorization.updateStrategy.type=RollingUpdate`
       rollingUpdate:
-        # identity.identityAuthorization.updateStrategy.rollingUpdate.maxUnavailable Maximum number of Identity Pods unavailable during the update process
+        # identity.authorization.updateStrategy.rollingUpdate.maxUnavailable Maximum number of Identity Pods unavailable during the update process
         maxUnavailable: 25%
-        # identity.identityAuthorization.updateStrategy.rollingUpdate.maxSurge Maximum number of Identity Pods created over the desired number of Pods
+        # identity.authorization.updateStrategy.rollingUpdate.maxSurge Maximum number of Identity Pods created over the desired number of Pods
         maxSurge: 25%
-    # identity.identityAuthorization.podManagementPolicy The Identity Pods scaling operations policy
-    # Used if `identity.identityAuthorization.kind` is set to `StatefulSet`
+    # identity.authorization.podManagementPolicy The Identity Pods scaling operations policy
+    # Used if `identity.authorization.kind` is set to `StatefulSet`
     # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
     podManagementPolicy: OrderedReady
-    # identity.identityAuthorization.podAnnotations Map of annotations to add to the Identity pods
+    # identity.authorization.podAnnotations Map of annotations to add to the Identity pods
     podAnnotations: {}
     # Configure a Security Context for the Identity Pods
     # If set to, it takes priority over the `podSecurityContext`
     podSecurityContext:
-      # identity.identityAuthorization.podSecurityContext.enabled Enable security context for the Identity pods
+      # identity.authorization.podSecurityContext.enabled Enable security context for the Identity pods
       enabled: false
-    # identity.identityAuthorization.customPodAntiAffinity Prohibiting the scheduling of Identity Pods relative to other Pods containing the specified labels on the same node
+    # identity.authorization.customPodAntiAffinity Prohibiting the scheduling of Identity Pods relative to other Pods containing the specified labels on the same node
     customPodAntiAffinity: {}
     # Pod affinity rules for Identity Pod scheduling by nodes relative to other Pods
     # Pod affinity allow you to constrain which nodes Identity Pods can be scheduled on based on the labels of Pods already running on that node
@@ -2637,87 +2637,87 @@ identity:
     #         - name1
     #         - name2
     nodeAffinity: {}
-    # identity.identityAuthorization.nodeSelector Node labels for Identity pods assignment
+    # identity.authorization.nodeSelector Node labels for Identity pods assignment
     # If set to, it takes priority over the `nodeSelector`
     nodeSelector: {}
-    # identity.identityAuthorization.tolerations Tolerations for Identity pods assignment
+    # identity.authorization.tolerations Tolerations for Identity pods assignment
     # If set to, it takes priority over the `tolerations`
     tolerations: []
     # Identity container image parameters
     image:
-      # identity.identityAuthorization.image.repository Identity container image repository
+      # identity.authorization.image.repository Identity container image repository
       repository: onlyoffice/docspace-identity-authorization
-      # identity.identityAuthorization.image.tag Identity container image tag
+      # identity.authorization.image.tag Identity container image tag
       # If set to, it takes priority over the `images.tag`
       tag: ""
-      # identity.identityAuthorization.image.pullPolicy Identity container image pull policy
+      # identity.authorization.image.pullPolicy Identity container image pull policy
       pullPolicy: IfNotPresent
     # Configure a Security Context for containers in Identity Pods
     # If set to, it takes priority over the `containerSecurityContext`
     containerSecurityContext:
-      # identity.identityAuthorization.containerSecurityContext.enabled Enable security context for containers in Identity pods
+      # identity.authorization.containerSecurityContext.enabled Enable security context for containers in Identity pods
       enabled: false
-    # identity.identityAuthorization.lifecycleHooks Defines the Identity container lifecycle hooks
+    # identity.authorization.lifecycleHooks Defines the Identity container lifecycle hooks
     # ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
     # It is used to trigger events to run at certain points in a container's lifecycle
     # There are two hooks that are exposed: `PostStart` and `PreStop`
     lifecycleHooks: {}
-    # identity.identityAuthorization.containerPorts.authorization Identity container port
+    # identity.authorization.containerPorts.authorization Identity container port
     containerPorts:
       authorization: 8080
     # Probe used for the Identity container: startup, readiness and liveness probes
     # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-    # The parameters below for startup probes are used only when `identity.identityAuthorization.startupProbe.enabled=true`
+    # The parameters below for startup probes are used only when `identity.authorization.startupProbe.enabled=true`
     startupProbe:
-      # identity.identityAuthorization.startupProbe.enabled Enable startupProbe for Identity container
+      # identity.authorization.startupProbe.enabled Enable startupProbe for Identity container
       enabled: true
       httpGet:
-        # identity.identityAuthorization.startupProbe.httpGet.path Checking the path for startupProbe
+        # identity.authorization.startupProbe.httpGet.path Checking the path for startupProbe
         path: /health
-        # identity.identityAuthorization.startupProbe.httpGet.port Checking the port for startupProbe
+        # identity.authorization.startupProbe.httpGet.port Checking the port for startupProbe
         port: 8080
-      # identity.identityAuthorization.startupProbe.failureThreshold Failure threshold for startupProbe
+      # identity.authorization.startupProbe.failureThreshold Failure threshold for startupProbe
       failureThreshold: 30
-      # identity.identityAuthorization.startupProbe.periodSeconds Period seconds for startupProbe
+      # identity.authorization.startupProbe.periodSeconds Period seconds for startupProbe
       periodSeconds: 10
-    # The parameters below for readiness probes are used only when `identity.identityAuthorization.readinessProbe.enabled=true`
+    # The parameters below for readiness probes are used only when `identity.authorization.readinessProbe.enabled=true`
     readinessProbe:
-      # identity.identityAuthorization.readinessProbe.enabled Enable readinessProbe for Identity container
+      # identity.authorization.readinessProbe.enabled Enable readinessProbe for Identity container
       enabled: true
-      # identity.identityAuthorization.readinessProbe.failureThreshold Failure threshold for readinessProbe
+      # identity.authorization.readinessProbe.failureThreshold Failure threshold for readinessProbe
       failureThreshold: 2
       httpGet:
-        # identity.identityAuthorization.readinessProbe.httpGet.path Checking the path for readinessProbe
+        # identity.authorization.readinessProbe.httpGet.path Checking the path for readinessProbe
         path: /health
-        # identity.identityAuthorization.readinessProbe.httpGet.port Checking the port for readinessProbe
+        # identity.authorization.readinessProbe.httpGet.port Checking the port for readinessProbe
         port: 8080
-      # identity.identityAuthorization.readinessProbe.periodSeconds Period seconds for readinessProbe
+      # identity.authorization.readinessProbe.periodSeconds Period seconds for readinessProbe
       periodSeconds: 10
-      # identity.identityAuthorization.readinessProbe.successThreshold Success threshold for readinessProbe
+      # identity.authorization.readinessProbe.successThreshold Success threshold for readinessProbe
       successThreshold: 1
-      # identity.identityAuthorization.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+      # identity.authorization.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
       timeoutSeconds: 5
-    # The parameters below for liveness probes are used only when `identity.identityAuthorization.livenessProbe.enabled=true`
+    # The parameters below for liveness probes are used only when `identity.authorization.livenessProbe.enabled=true`
     livenessProbe:
-      # identity.identityAuthorization.livenessProbe.enabled Enable livenessProbe for Identity container
+      # identity.authorization.livenessProbe.enabled Enable livenessProbe for Identity container
       enabled: true
-      # identity.identityAuthorization.livenessProbe.failureThreshold Failure threshold for livenessProbe
+      # identity.authorization.livenessProbe.failureThreshold Failure threshold for livenessProbe
       failureThreshold: 3
       httpGet:
-        # identity.identityAuthorization.livenessProbe.httpGet.path Checking the path for livenessProbe
+        # identity.authorization.livenessProbe.httpGet.path Checking the path for livenessProbe
         path: /health
-        # identity.identityAuthorization.livenessProbe.httpGet.port Checking the port for livenessProbe
+        # identity.authorization.livenessProbe.httpGet.port Checking the port for livenessProbe
         port: 8080
-      # identity.identityAuthorization.livenessProbe.periodSeconds Period seconds for livenessProbe
+      # identity.authorization.livenessProbe.periodSeconds Period seconds for livenessProbe
       periodSeconds: 10
-      # identity.identityAuthorization.livenessProbe.successThreshold Success threshold for livenessProbe
+      # identity.authorization.livenessProbe.successThreshold Success threshold for livenessProbe
       successThreshold: 1
-      # identity.identityAuthorization.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+      # identity.authorization.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
       timeoutSeconds: 5
     # Identity container resource requests and limits
     # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-    # identity.identityAuthorization.resources.requests The requested resources for the Identity container
-    # identity.identityAuthorization.resources.limits The resources limits for the Identity container
+    # identity.authorization.resources.requests The requested resources for the Identity container
+    # identity.authorization.resources.limits The resources limits for the Identity container
     resources:
       requests:
         memory: "256Mi"
@@ -2725,7 +2725,7 @@ identity:
       limits:
         memory: "2Gi"
         cpu: "2000m"
-    # identity.identityAuthorization.mysqlUser Database user who will be used by the Identity to connect to the database
+    # identity.authorization.mysqlUser Database user who will be used by the Identity to connect to the database
     # If not set, `connections.mysqlUser` will be used
     # If set to, it takes priority over the `connections.mysqlUser`
     mysqlUser: ""
